[gd_scene load_steps=32 format=2]

[ext_resource path="res://Interface/Consumers/Menu.gd" type="Script" id=1]
[ext_resource path="res://Interface/resources/UI/Stars/1s.png" type="Texture" id=2]
[ext_resource path="res://Interface/resources/Backgrounds/2.png" type="Texture" id=3]
[ext_resource path="res://Interface/resources/UI/Stars/2s.png" type="Texture" id=4]
[ext_resource path="res://Interface/resources/UI/Stars/3s.png" type="Texture" id=5]
[ext_resource path="res://Interface/resources/Backgrounds/Defeat.png" type="Texture" id=6]
[ext_resource path="res://Interface/resources/black66.png" type="Texture" id=7]
[ext_resource path="res://Interface/resources/Backgrounds/pausa.png" type="Texture" id=8]
[ext_resource path="res://Interface/resources/Backgrounds/Victory.png" type="Texture" id=9]
[ext_resource path="res://Interface/resources/UI/Buttons/br.png" type="Texture" id=10]
[ext_resource path="res://Interface/resources/UI/Buttons/bp.png" type="Texture" id=11]
[ext_resource path="res://Interface/resources/UI/Buttons/bs.png" type="Texture" id=12]
[ext_resource path="res://Interface/resources/UI/Buttons/be.png" type="Texture" id=13]
[ext_resource path="res://Interface/resources/UI/Buttons/bre.png" type="Texture" id=14]
[ext_resource path="res://Interface/resources/Result/2.png" type="Texture" id=15]
[ext_resource path="res://Interface/resources/Result/3.png" type="Texture" id=16]
[ext_resource path="res://Interface/resources/Result/5.png" type="Texture" id=17]
[ext_resource path="res://Interface/resources/Result/4.png" type="Texture" id=18]
[ext_resource path="res://Interface/resources/Result/6.png" type="Texture" id=19]
[ext_resource path="res://Interface/resources/Result/7.png" type="Texture" id=20]
[ext_resource path="res://Interface/resources/Result/8.png" type="Texture" id=21]
[ext_resource path="res://Interface/resources/Result/9.png" type="Texture" id=22]
[ext_resource path="res://Interface/resources/Result/10.png" type="Texture" id=23]
[ext_resource path="res://Interface/resources/Result/1.png" type="Texture" id=24]
[ext_resource path="res://Interface/resources/Fonts/ARIAL.TTF" type="DynamicFontData" id=25]
[ext_resource path="res://Interface/resources/Backgrounds/menu.png" type="Texture" id=26]
[ext_resource path="res://Interface/resources/music/Friendly Confirm Button.mp3" type="AudioStream" id=27]

[sub_resource type="ImageTexture" id=3]

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 156.5, 60.25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 156, 62.5 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="White1" type="Sprite" parent="."]
visible = false
position = Vector2( 494, 327 )
texture = ExtResource( 8 )

[node name="White" type="Sprite" parent="."]
visible = false
position = Vector2( 576, 320 )
texture = ExtResource( 26 )

[node name="StartButton1" type="Button" parent="."]
visible = false
margin_left = 518.0
margin_top = 172.0
margin_right = 934.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 62, 20 )
text = "Start"
icon = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton1" type="Button" parent="."]
visible = false
margin_left = 309.0
margin_top = 158.0
margin_right = 725.0
margin_bottom = 259.0
rect_pivot_offset = Vector2( 62, 20 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton1" type="Button" parent="."]
visible = false
margin_left = 311.0
margin_top = 377.0
margin_right = 724.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 62, 20 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButtonLevels1" type="Button" parent="."]
visible = false
margin_left = 311.0
margin_top = 377.0
margin_right = 724.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 134, 14 )
text = "Return to levels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton1" type="Button" parent="."]
visible = false
margin_left = 311.0
margin_top = 418.0
margin_right = 724.0
margin_bottom = 450.0
rect_pivot_offset = Vector2( 134, 14 )
text = "Return to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton1" type="Button" parent="."]
visible = false
margin_left = 308.0
margin_top = 270.0
margin_right = 727.0
margin_bottom = 303.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel1" type="Label" parent="."]
visible = false
margin_left = 444.0
margin_top = 237.0
margin_right = 484.0
margin_bottom = 251.0
text = "Total Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNumberLabel" type="Label" parent="."]
visible = false
margin_left = 531.0
margin_top = 237.0
margin_right = 571.0
margin_bottom = 251.0
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardLabel" type="Label" parent="."]
visible = false
margin_left = 482.0
margin_top = 172.0
margin_right = 549.0
margin_bottom = 186.0
text = "Board size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardLabel2" type="Label" parent="."]
visible = false
margin_left = 482.0
margin_top = 212.0
margin_right = 549.0
margin_bottom = 226.0
text = "Turn limit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardLabel3" type="Label" parent="."]
visible = false
margin_left = 444.0
margin_top = 251.0
margin_right = 542.0
margin_bottom = 265.0
text = "Score objective"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
visible = false
margin_left = 571.0
margin_top = 172.0
margin_right = 600.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_left = 571.0
margin_top = 212.0
margin_right = 629.0
margin_bottom = 236.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="."]
visible = false
margin_left = 571.0
margin_top = 251.0
margin_right = 629.0
margin_bottom = 275.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBlack" type="Sprite" parent="."]
visible = false
position = Vector2( 112, 95 )
z_index = -1
texture = ExtResource( 7 )

[node name="BackgroundMain" type="Sprite" parent="."]
visible = false
position = Vector2( 362, 226 )
texture = ExtResource( 3 )

[node name="1" type="Sprite" parent="."]
visible = false
position = Vector2( 711, 340 )
z_index = -1
texture = ExtResource( 24 )

[node name="2" type="Sprite" parent="."]
visible = false
position = Vector2( 711, 340 )
z_index = -1
texture = ExtResource( 15 )

[node name="3" type="Sprite" parent="."]
visible = false
position = Vector2( 711, 340 )
z_index = -1
texture = ExtResource( 16 )

[node name="4" type="Sprite" parent="."]
visible = false
position = Vector2( 711, 340 )
z_index = -1
texture = ExtResource( 18 )

[node name="5" type="Sprite" parent="."]
visible = false
position = Vector2( 711, 340 )
z_index = -1
texture = ExtResource( 17 )

[node name="6" type="Sprite" parent="."]
visible = false
position = Vector2( 711, 340 )
z_index = -1
texture = ExtResource( 19 )

[node name="7" type="Sprite" parent="."]
visible = false
position = Vector2( 711, 340 )
z_index = -1
texture = ExtResource( 20 )

[node name="8" type="Sprite" parent="."]
visible = false
position = Vector2( 711, 340 )
z_index = -1
texture = ExtResource( 21 )

[node name="9" type="Sprite" parent="."]
visible = false
position = Vector2( 711, 340 )
z_index = -1
texture = ExtResource( 22 )

[node name="10" type="Sprite" parent="."]
visible = false
position = Vector2( 711, 340 )
z_index = -1
texture = ExtResource( 23 )

[node name="BackgroundDefeat" type="Sprite" parent="."]
visible = false
position = Vector2( 485, 336 )
z_index = -1
texture = ExtResource( 6 )

[node name="BackgroundVictory" type="Sprite" parent="."]
visible = false
position = Vector2( 485, 336 )
z_index = -1
texture = ExtResource( 9 )

[node name="1s" type="Sprite" parent="."]
visible = false
position = Vector2( 484, 237 )
texture = ExtResource( 2 )

[node name="2s" type="Sprite" parent="."]
visible = false
position = Vector2( 488, 232 )
texture = ExtResource( 4 )

[node name="3s" type="Sprite" parent="."]
visible = false
position = Vector2( 491, 233 )
texture = ExtResource( 5 )

[node name="StartButton" type="Area2D" parent="."]
visible = false

[node name="Bp" type="Sprite" parent="StartButton"]
position = Vector2( 211, 273 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartButton"]
position = Vector2( 210.5, 272 )
shape = SubResource( 4 )

[node name="ExitButton" type="Area2D" parent="."]
visible = false

[node name="Be" type="Sprite" parent="ExitButton"]
position = Vector2( 38, 77 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitButton"]
position = Vector2( 38, 76.5 )
shape = SubResource( 5 )

[node name="ContinueButton" type="Area2D" parent="."]
visible = false

[node name="Bre" type="Sprite" parent="ContinueButton"]
position = Vector2( 416, 33 )
texture = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContinueButton"]
position = Vector2( 416, 34 )
shape = SubResource( 5 )

[node name="ReturnButton" type="Area2D" parent="."]
visible = false

[node name="Br" type="Sprite" parent="ReturnButton"]
position = Vector2( 405, 443 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReturnButton"]
position = Vector2( 404, 442 )
shape = SubResource( 5 )

[node name="SettingsButton" type="Area2D" parent="."]
visible = false

[node name="Bs" type="Sprite" parent="SettingsButton"]
position = Vector2( 619, 261 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SettingsButton"]
position = Vector2( 618, 260 )
shape = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[connection signal="pressed" from="StartButton1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ContinueButton1" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ExitButton1" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ReturnButtonLevels1" to="." method="_on_ReturnButtonLevels_pressed"]
[connection signal="pressed" from="ReturnButton1" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="SettingsButton1" to="." method="_on_SettingsButton_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="LineEdit2" to="." method="_on_LineEdit2_text_changed"]
[connection signal="input_event" from="StartButton" to="." method="_on_StartButton_input_event"]
[connection signal="input_event" from="ExitButton" to="." method="_on_ExitButton_input_event"]
[connection signal="input_event" from="ContinueButton" to="." method="_on_ContinueButton_input_event"]
[connection signal="input_event" from="ReturnButton" to="." method="_on_ReturnButton_input_event"]
[connection signal="input_event" from="SettingsButton" to="." method="_on_Area2D_input_event"]
